2010-11-11  Carol Szabo <carol.szabo@nokia.com>

Reviewed by Kent Tamura.

        css2:order of counters in out-of flow content
        https://bugs.webkit.org/show_bug.cgi?id=32412

        * fast/css/content: Added.
        * fast/css/content/content-none-expected.txt: Added.
        * fast/css/content/content-none.html: Added.
        * fast/css/content/content-normal-expected.txt: Added.
        * fast/css/content/content-normal.html: Added.
        Added to provide portable tests for the "content" CSS property.
        * platform/mac/css2.1/t1204-order-01-d-expected.checksum:
        * platform/mac/css2.1/t1204-order-01-d-expected.png:
        * platform/mac/css2.1/t1204-order-01-d-expected.txt:
        Changed because the existing content was bad, but matching the
        existing bug that this patch fixes.
2010-11-11  Carol Szabo <carol.szabo@nokia.com>

        Reviewed by Kent Tamura.

        css2:order of counters in out-of flow content
        https://bugs.webkit.org/show_bug.cgi?id=32412

        Tests: fast/css/content/content-none.html
               fast/css/content/content-normal.html

        * css/CSSParser.cpp:
        (WebCore::CSSParser::parseContent):
        Added support for none, normal, open-quote, no-open-quote, etc.
        identifiers in terms of parsing only, as this has effect on the
        evaluation of counters. No further implementation needed for
        none and normal, the others are parsed but do not work as expected.

Canonical link: https://commits.webkit.org/62358@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71882 268f45cc-cd09-0410-ab3c-d52691b4dbfc